# questions

./: .gitignore  Dockerfile  Makefile  README.md  infer_schema.py  pyproject.toml
flask/: app.py
flask/templates/: question.html  result.html
postgres/: init-wiki-db.sh
pyspark/: load_to_postgres.py  sample.py
