[tool.poetry]
name = "questions"
version = "0.1.0"
description = ""
authors = ["Marko Kolarek <marko.kolarek@protonmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyspark = "^3.5.1"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.5.0"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
